--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,5 @@
 [toolchain]
-channel = "nightly-2024-12-15"
+channel = "nightly"
 targets = ["wasm32-unknown-unknown", "aarch64-linux-android"]
 components = ["rust-src", "rustc", "cargo"]
 
